Quorum/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignObjectTextObj.quorum
class Main
    action Main
        Text v
        v:SetValue("text")
        Test(v)
    end

    action Test(Object var)
        Text v = cast(Text, var)
        if v:GetValue() = "text"
            output "passed"
        end
    end
end
