Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjIntObj.quorum
class Main
    action Main
        Integer v
        v:SetValue(5)
        Test(v)
    end

    action Test(Text var)
    end
end
